--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@ else:
 											</div>
                                         </article>
 										<article>
-                                                <a href="https://github.com/jhuo831alex/Research_NBA-Player-Analytics" class="image" target="_blank"><img src="images/NBA.jpg" alt="" /></a>
+                                                <a href="html/nba.html" class="image"><img src="images/NBA.jpg" alt="" /></a>
                                                 <div class="inner">
-                                                    <h4><a href="https://github.com/jhuo831alex/Research_NBA-Player-Analytics" target="_blank">Sports Analytics: A Cost Efficient Approach to Building an NBA Team</a>
+                                                    <h4><a href="html/nba.html">Sports Analytics: A Cost Efficient Approach to Building an NBA Team</a>
                                                         <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                     </h4>
                                                     <p>
