Add expedia page

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@ else:
                                                 </div>
                                         </article>                                       
 										<article>
-                                                <a href="https://github.com/jhuo831alex/DataFest2017_Expedia" class="image" target="_blank"><img src="images/expedia.png" alt="" /></a>
+                                                <a href="html/expedia.html" class="image"><img src="images/expedia.png" alt="" /></a>
                                                 <div class="inner">
-                                                    <h4><a href="https://github.com/jhuo831alex/DataFest2017_Expedia" target="_blank">DataFest 2017: Customized Expedia Hotel Recommendations</a>
+                                                    <h4><a href="html/expedia.html">DataFest 2017: Customized Expedia Hotel Recommendations</a>
                                                         <object type="image/svg+xml" data="https://img.shields.io/badge/-PUBLIC-success"></object>
                                                     </h4>
                                                     <p>
