--- a/html/indeed.html
+++ b/html/indeed.html
@@ -11,7 +11,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-                    <span class="image avatar"><a href="../html/easter_egg.html" class="image" target="_blank"><img src="../images/avatar.jpg" alt="" /></a></span>
+                    <span class="image avatar"><a href="../html/easter_egg.html" class="image"><img src="../images/avatar.jpg" alt="" /></a></span>
 					<h1 id="logo"><a href="../index.html">Alex (Jiahao) Huo</a></h1>
 					<p>Aspired Data Scientist</p>
 				</header>
