Added past project

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ else:
 										<article>
                                                 <a class="image"><img src="images/nlp.jpg" alt="" /></a>
                                                 <div class="inner">
-                                                    <h4>NLP: Generate Knowledge Graphs to Predict Fertilizer Price Trends
+                                                    <h4>NLP: Generating Knowledge Graphs to Predict Fertilizer Price Trends
                                                         <object type="image/svg+xml" data=https://img.shields.io/badge/OCP%20Group-PRIVATE-critical></object>
                                                     </h4>
                                                     <p>
@@ -140,7 +140,19 @@ else:
                                                         <b><em>Completed analysis and 12-page-long paper in a time limit of 8 hours</em></b>
                                                     </p>
                                                 </div>
-                                        </article>                                        
+                                        </article>
+										<article>
+                                                <a class="image"><img src="images/innovation.jpg" alt="" /></a>
+                                                <div class="inner">
+                                                    <h4>Recommendations on Usage of LinkedIn Sales Navigator
+                                                        <object type="image/svg+xml" data=https://img.shields.io/badge/Innovation%20Booster-PRIVATE-critical></object>
+                                                    </h4>
+                                                    <p>
+                                                        Scraped LinkedIn profiles to uncover insights on characteristics of converted clients with machine learning and topic modeling methods, and advised on pitching different potential clients using LinkedIn Sales Navigator <br />
+                                                        <b><em>Increased conversion rate by 50%</em></b>
+                                                    </p>
+                                                </div>
+                                        </article>                                                                                
 										<article>
                                                 <a href="html/pubg.html" class="image"><img src="images/pubg.jpg" alt="" /></a>
                                                 <div class="inner">
