--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <!---<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span> -->
                     <span class="image avatar"><a href="html/easter_egg.html" class="image"><img src="images/avatar.jpg" alt="" /></a></span>
 					<h1 id="logo"><a href="#intro">Alex (Jiahao) Huo</a></h1>
-					<p>Aspired Data Scientist</p>
+					<p>Aspiring Data Scientist</p>
 				</header>
 				<nav id="nav">
 					<ul>
