Updated blog post

--- a/index.html
+++ b/index.html
@@ -105,6 +105,18 @@ else:
 									<h3>Projects I Have Done</h3>
 									<blockquote>It’s through our actions — our decisions — that we affect the world around us. </blockquote>
 									<div class="features">
+                                        <article>
+                                            <a class="image"><img src="images/credit.jpg" alt="" /></a>
+                                            <div class="inner">
+                                                <h4><a href="html/credit.html">Churn Analysis： Customer-At-Risk Model for account managers
+                                                    <object type="image/svg+xml" data=https://img.shields.io/badge/CreditRiskMonitor-PRIVATE-critical></object>
+                                                </h4>
+                                                <p>
+                                                    Delivered a Churn Model and made recommendations for user retention strategies. <br />
+                                                    <b><em>Potential uplift in profit: $150K </em></b>
+                                                </p>
+                                            </div>
+                                        </article>
 										<article>
                                                 <a class="image"><img src="images/cod.jpg" alt="" /></a>
                                                 <div class="inner">
